--- a/config/corne.conf
+++ b/config/corne.conf
@@ -2,3 +2,12 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_EXT_POWER=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_STUDIO=y
+
+# Deep Sleep (15 minutes default)
+CONFIG_ZMK_SLEEP=y
+
+# Keyboard Name
+CONFIG_ZMK_KEYBOARD_NAME="Hearter CRKBD"
+
+# Battery Percentage
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
